Bug #5084: Changed file name is safe edit causes multiple issues. 1- After safe edit is approved the old file will remain in the public data directory. Override clearSystemVersion() to clear public data directory when exiting safe edit. 2- While still in safe edit, if you update permissions, it will create a copy of the new file in the public data directory. If you upload a different file with the same name, it will update that file. Place checks where needed to not touch the public data directory while safe editing. This also extends to image varieties! 3- If you cancel safe edit you get a HIPO error: File::revertToSystemVersion() _checkOutCheck() function call need to pass in the old file version.

--- a/core/locale/en/lang_errors.xml
+++ b/core/locale/en/lang_errors.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_errors.xml,v 1.131 2011/02/18 03:22:28 cupreti Exp $
+* $Id: lang_errors.xml,v 1.132 2011/04/29 05:07:14 mhaidar Exp $
 *
 */
 
@@ -1808,6 +1808,8 @@ Full Node Contents :
 	
 	<!-- Image file -->
 	<error code="CORE0304">Uploaded file is not an image file</error>
+	
+	<error code="CORE0305">Could not clear old files from public data directory for asset "%s" after exiting Safe Edit.</error>
 	
 	<error code="RPRT0000">Could not open temporary file, report generation aborted</error>
 		<!-- packages/cms/reports/report_links/report_links_edit_fns.inc:84: -->
