--- a/packages/sharepoint/cmis_bridge/locale/en/lang_screen_details.xml
+++ b/packages/sharepoint/cmis_bridge/locale/en/lang_screen_details.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_screen_details.xml,v 1.6 2011/04/28 00:14:00 mhaidar Exp $
+* $Id: lang_screen_details.xml,v 1.7 2011/05/03 06:23:16 mhaidar Exp $
 *
 */
 -->
@@ -24,11 +24,12 @@
 	</section>
     <section name="Connection Setup" write_access="write:attributes">
         <field>
-       		 <display_name>WSDL URLs</display_name>
+       		 <display_name>Service URLs</display_name>
             <function_call>
                 <paint_function     name="paintWsdlUrl" />
                 <process_function   name="processWsdlUrl" />
             </function_call>
+            <note>Example: http://webURL/_vti_bin/cmis/soap/ObjectService.svc </note>
         </field>
         <field attribute="username">
 			<display_name>Username</display_name>
@@ -56,10 +57,6 @@
     	<field attribute="repository_name">
 			<display_name>Repository Name</display_name>
 			<note>The root folder name. E.g. the Document Library name (case sensitive). All files must be located under this root folder and not under any sub-folders.</note>
-		</field>
-		<field attribute="repository_id">
-			<display_name>Repository ID</display_name>
-			<note>Enter the unique ID of the Repository as an alternative to the 'Repository Name' above. Needed when e.g. using Sharepoint Subsite Document Libraries.</note>
 		</field>
     	<field show_if="isConnected">
 			<display_name>Metadata Fields</display_name>
