--- a/core/assets/metadata/metadata_fields/metadata_field_hierarchy/locale/en/lang_screen_details.xml
+++ b/core/assets/metadata/metadata_fields/metadata_field_hierarchy/locale/en/lang_screen_details.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_screen_details.xml,v 1.5 2009/10/16 01:39:28 lwright Exp $
+* $Id: lang_screen_details.xml,v 1.5.6.1 2011/05/04 04:49:15 mhaidar Exp $
 *
 */
 -->
@@ -57,8 +57,12 @@
 		</field>
 	</section>
 	<section name="View Options">
-		<field attribute="display_type">
+		<field>
 			<display_name>Display Type</display_name>
+			<function_call>
+				<paint_function   name="paintDisplayType"   />
+				<process_function name="processDisplayType" />
+			</function_call>
 			<note />
 		</field>
 		<field attribute="is_contextable">
