--- a/core/locale/en/lang_errors.xml
+++ b/core/locale/en/lang_errors.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_errors.xml,v 1.128.2.3 2011/05/04 06:01:13 mhaidar Exp $
+* $Id: lang_errors.xml,v 1.128.2.4 2011/05/26 05:37:05 cupreti Exp $
 *
 */
 
@@ -1810,6 +1810,10 @@ Full Node Contents :
 	<error code="CORE0304">Uploaded file is not an image file</error>
 		
 	<error code="CORE0305">Could not clear old files from public data directory for asset "%s" after exiting Safe Edit.</error>
+	
+	<!-- Roles -->
+	<error code="CORE0306">Cannot set roles. #%1$s is not a valid Role asset</error>
+	<error code="CORE0307">Cannot set roles. #%1$s is not a valid User/User Group asset</error>	
 
 	<error code="RPRT0000">Could not open temporary file, report generation aborted</error>
 		<!-- packages/cms/reports/report_links/report_links_edit_fns.inc:84: -->
