--- a/packages/cms/listing_engine/locale/en/lang_screen_details.xml
+++ b/packages/cms/listing_engine/locale/en/lang_screen_details.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_screen_details.xml,v 1.23 2010/06/23 01:56:22 cupreti Exp $
+* $Id: lang_screen_details.xml,v 1.23.4.1 2011/05/27 01:26:48 akarelia Exp $
 *
 */
 -->
@@ -128,11 +128,11 @@
 		</field>
 		<field attribute="page_link_format">
 			<display_name>Page Link Format</display_name>
-			<note>This is the format of a linked page number in pagination. Available keywords are %page_link%, %page_number%</note>
+			<note>This format defines the individual layout of items on the listing's linked page list. If you are using the A-Z list format, this will define the individual layout of items on the linked character list. Available keywords: %page_link% and %page_number%.</note>
 		</field>
 		<field attribute="current_page_format">
 			<display_name>Current Page Format</display_name>
-			<note>This is the format of current page number in pagination. Available keyword is %page_number%</note>
+			<note>This format defines the layout of the current page number on the listing's linked page list. If you are using the A-Z list format, this will define the layout of an item in the linked character list when no results are found under that particular letter. Available keywords: %page_number%.</note>
 		</field>	
 	</section>
 	<section name="List Position Settings">
