--- a/packages/ecommerce/product/locale/en/lang_screen_details.xml
+++ b/packages/ecommerce/product/locale/en/lang_screen_details.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_screen_details.xml,v 1.6 2010/08/19 10:44:54 ata Exp $
+* $Id: lang_screen_details.xml,v 1.7 2011/06/20 01:58:55 mhaidar Exp $
 *
 */
 -->
@@ -21,7 +21,7 @@
 			<display_name>Product Name</display_name>
 			<note />
 		</field>
-		<field>
+		<field keyword="price">
 			<display_name>Product Price</display_name>
 			<note />
 			<function_call>
