--- a/packages/bulkmail/locale/en/lang_strings.xml
+++ b/packages/bulkmail/locale/en/lang_strings.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_strings.xml,v 1.40.8.1 2011/06/15 23:08:34 ewang Exp $
+* $Id: lang_strings.xml,v 1.40.8.2 2011/06/21 23:38:24 akarelia Exp $
 *
 *
 * Bulkmail Package Localised Strings File
@@ -38,7 +38,7 @@
 If you have received this email in error, please take no further action or contact %s.</string>
 	<string source="bsp_verification_email_body_sub_part2">
 
-To active your subscription, click the link below:
+To activate your subscription, click the link below:
 
 %s</string>
 <string source="bsp_verification_email_body_part2">
